<resources>
    <string name="app_name">RetrofitFullTest</string>
    <string name="putCityName">Put the name of your city here</string>
    <string name="search">Search</string>
    <string name="weatherData">Weather</string>
    <string name="loadingError">Can\'t load data!</string>
    <string name="inputReminder">Put the name of the city first!</string>
    <string name="whereAmI">Where am I?</string>
    <string name="tryAgainLater">Getting your location - try again a bit later!</string>
    <string name="gpsRequest">GPS Request</string>
    <string name="gpsMessage">This application needs access to GPS to get your current location</string>
    <string name="gpsAgree">Agree!</string>
    <string name="gpsDeny">Deny</string>
    <string name="timeData">Local time</string>
    <string name="favorite">Favorite</string>
    <string name="history">History</string>
    <string name="details">Details</string>
    <string name="detailsTV">Tap to see more details</string>
    <string name="weather">Weather</string>
    <string name="addToFavorites">City was added to Favorites</string>
</resources>