<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/weatherBSDataLinear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/detailsTV"
            style="@style/TextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/details"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textAlignment="center">
        </TextView>

        <TextView
            android:id="@+id/cityTV"
            style="@style/TextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/weatherData"
            android:textAlignment="center">
        </TextView>

        <TextView
            android:id="@+id/tempTV"
            style="@style/TextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/weatherData"
            android:textAlignment="center">
        </TextView>

        <TextView
            android:id="@+id/tempTVminMax"
            style="@style/TextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/weatherData"
            android:textAlignment="center">
        </TextView>

        <TextView
            android:id="@+id/weatherTV"
            style="@style/TextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/weatherData"
            android:textAlignment="center">
        </TextView>

        <TextView
            android:id="@+id/windTV"
            style="@style/TextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/weatherData"
            android:textAlignment="center">
        </TextView>

        <TextView
            android:id="@+id/timeTV"
            style="@style/TextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/timeData"
            android:textAlignment="center">
        </TextView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>