<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/cityNameET"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:hint="@string/putCityName"
        android:inputType="text"
        android:maxLines="1"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></androidx.appcompat.widget.AppCompatEditText>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/searchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:backgroundTint="@color/purple_700"
        android:text="@string/search"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/currentCityButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cityNameET"></androidx.appcompat.widget.AppCompatButton>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/currentCityButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:backgroundTint="@color/purple_700"
        android:text="@string/whereAmI"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/searchButton"
        app:layout_constraintTop_toBottomOf="@id/cityNameET"></androidx.appcompat.widget.AppCompatButton>

    <LinearLayout
        android:id="@+id/weatherDataLinear"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_margin="15dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/searchButton">

        <TextView
            android:id="@+id/cityTV"
            style="@style/TextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/weatherData"
            android:textAlignment="center"></TextView>

        <TextView
            android:id="@+id/tempTV"
            style="@style/TextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/weatherData"
            android:textAlignment="center"></TextView>

        <TextView
            android:id="@+id/weatherTV"
            style="@style/TextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/weatherData"
            android:textAlignment="center"></TextView>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/loader"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="15dp"
        android:background="@color/white"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/searchButton"
        tools:visibility="visible">

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminateTint="@color/purple_700" />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>